--- a/little.cabal
+++ b/little.cabal
@@ -17,6 +17,7 @@ executable little
     unordered-containers,
     xeno
   hs-source-dirs:   app
+  ghc-options: -Wall -Werror
   default-language: Haskell2010
   default-extensions:
     OverloadedStrings
