--- a/little.cabal
+++ b/little.cabal
@@ -14,6 +14,7 @@ executable little
     lens,
     mtl,
     optparse-applicative,
+    process,
     unordered-containers,
     xeno
   hs-source-dirs:   app
