--- a/little.cabal
+++ b/little.cabal
@@ -23,3 +23,6 @@ executable little
   default-language: Haskell2010
   default-extensions:
     OverloadedStrings
+    DuplicateRecordFields
+    OverloadedRecordDot
+    NoFieldSelectors
