--- a/little.cabal
+++ b/little.cabal
@@ -4,22 +4,11 @@ version:            0.1.0.0
 author:             Isaac Elliott
 maintainer:         isaace71295@gmail.com
 
-executable little
-  main-is:          Main.hs
-  build-depends:
-    base ^>=4.16.1.0,
-    attoparsec,
-    bytestring,
-    directory,
-    lens,
-    mtl,
-    optparse-applicative,
-    process,
-    temporary,
-    unordered-containers,
-    xeno
-  hs-source-dirs:   app
-  ghc-options: -Wall -Werror
-  default-language: Haskell2010
-  default-extensions:
-    OverloadedStrings
+library
+    build-depends:
+        base >=4.16 && <5
+    hs-source-dirs:   src
+    exposed-modules:
+        Little
+    ghc-options:      -Wall -Werror
+    default-language: Haskell2010
