--- a/little.cabal
+++ b/little.cabal
@@ -6,9 +6,27 @@ maintainer:         isaace71295@gmail.com
 
 library
     build-depends:
-        base >=4.16 && <5
+        base >=4.16 && <5,
+        containers,
+        monoidal-containers,
+        text >=2
     hs-source-dirs:   src
     exposed-modules:
         Little
+        Little.Code
+        Little.Doc
+    ghc-options:      -Wall -Werror
+    default-language: Haskell2010
+    default-extensions: OverloadedStrings
+
+executable little-examples
+    build-depends:
+        base >=4.16 && <5,
+        containers,
+        little,
+        text
+    hs-source-dirs:   examples
+    main-is:          Main.hs
+    other-modules:    Example.Expr
     ghc-options:      -Wall -Werror
     default-language: Haskell2010
